--- a/src/components/indiaDetails/districtDetails/districtDetails.css
+++ b/src/components/indiaDetails/districtDetails/districtDetails.css
@@ -19,6 +19,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: rgb(233, 36, 36);
-    color: white;
+    background-color: rgb(71, 186, 231);
+    color: black;
+    font-family: sans-serif;
   }
